# graph-tool

./: .gitignore  NetworkStreamTool.py  NetworkStreamTool.spec  README.md  pyproject.toml  test.py
.github/actions/setup/: action.yaml
.github/workflows/: build-artifacts.yaml  code-quality.yaml  install-sync.yaml  release.yaml  workflow.yaml
.to_add_to_internal/faicons/: icons.json
algorithms/: counter.bak  counter.dir
algorithms/_config/interfaces/: __init__.py  batch_algorithm.py  preprocess_edge.py  streaming_algorithm.py
algorithms/_config/templates/: template_batch.py  template_preprocessing.py  template_streaming.py
app/: __init__.py  app.py  main.py  run_algorithms.py  util.py
app/algorithms/batch/: algorithm_1.py
app/algorithms/preprocess/: function_0.py  function_2.py
app/algorithms/streaming/: algorithm_0.py  (+1 more)
app/config/: __init__.py
app/demos/: __init__.py  connections.csv  connections_preprocess.py  degree_centrality_batch.py  degree_centrality_stream.py  degree_cetraility_batch.py
app/server/: __init__.py  feature_open.py  feature_save.py  main.py  results.md
app/static/: __init__.py  styles.css
app/streaming/: interfaces.py  main.py  utli.py
app/ui/: __init__.py  main.py  sidebar.py
demos/: connection_preprocessing.py  connections_preprocess.py  connections_small.csv  degree_centrality_accurate_stream.py  degree_centrality_approx_stream.py  degree_centrality_approximate_stream.py  degree_centrality_batch.py  degree_centrality_stream.py  stream-misra-gries.py  stream_misra_gries.py
experiments/eksperyment!/: results.md
(+52 files in other folders)
