[project]
name = "network-stream-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "faicons>=0.2.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "ridgeplot>=0.1.27",
    "shiny>=1.1.0",
    "shinywidgets>=0.3.3",
    "kaleido==0.1.0.post1",
    "tabulate>=0.9.0",
    "pympler>=1.1",
    "pyinstaller>=6.11.1",
]
