[project]
name = "network-stream-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Benita Bartczak", email = "email@email.com"}, {name = "Michał Korzeń", email = "michal.korzen@pm.me"}]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "faicons>=0.2.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "ridgeplot>=0.1.27",
    "shiny>=1.1.0",
    "shinywidgets>=0.3.3",
    "tabulate>=0.9.0",
    "pympler>=1.1",
    "kaleido==0.2.1.post1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.241126",
    "pyinstaller>=6.11.1",
    "pyright[nodejs]>=1.1.389",
]
